9 дз. В некоторых файлах закомментил строки, потому что так и не разобрался, как сделать удаление заметки. Пытался сделать по методичке. Буду признателен, если дадите подсказки, что мне сделать.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="settings">Настройки</string>
     <string name="create_note_title">Создать новую заметку</string>
     <string name="edit_note_title">Редактировать</string>
+    <string name="refactor">Редактировать</string>
+    <string name="delete">Удалить</string>
+    <string name="info">Это приложение заметки. 2021 год.</string>
 </resources>
