--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,8 @@
     <string name="refactor">Редактировать</string>
     <string name="delete">Удалить</string>
     <string name="info">Это приложение заметки. 2021 год.</string>
+    <string name="alert">Предупреждение!</string>
+    <string name="alert_message">Вы точно хотите удалить заметку?</string>
+    <string name="yes">Да, уверен</string>
+    <string name="no">Нет, не уверен</string>
 </resources>
